<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RL"
    tools:context=".RLActivity">

    <TextView
        android:id="@+id/RLTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="Relative Layout Here."
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/LLView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RLTextView1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/RLTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Text View 1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/RLTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="Text View 2" />
    </LinearLayout>

    <TextView
        android:id="@+id/RLTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LLView1"
        android:layout_alignRight="@id/RLTextView1"
        android:padding="10dp"
        android:text="TextView" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/RLTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/enter_your_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ETName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/RLTextView5"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/RLBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ETName"
            android:layout_alignLeft="@id/ETName"
            android:layout_alignRight="@id/ETName"
            android:onClick="onClickHomeButton"
            android:text="@string/back_to_home" />
    </RelativeLayout>




    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="10dp"-->
    <!--        android:layout_below="@id/LLView1"-->
    <!--        android:background="@android:color/transparent" />-->
</RelativeLayout>